fixed: path issues when using docker