@@ -1,14 +1,17 @@
 package com.recipe.demo;
 
+import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.logging.Logger;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.stereotype.Component;
+import org.springframework.util.ResourceUtils;
 
 import com.recipe.model.recipe.Recipe;
 import com.recipe.model.recipe.RecipeRepository;
@@ -16,12 +19,13 @@ import com.recipe.model.users.User;
 import com.recipe.model.users.UserRepository;
 
 @Component
-public class DemoLoader implements CommandLineRunner{
+public class DemoLoader implements CommandLineRunner {
 
     @Autowired
     private RecipeRepository recipeRepository;
     @Autowired
     private UserRepository userRepository;
+    private Logger logger = Logger.getLogger(DemoLoader.class.getName());
 
     @Override
     public void run(String... args) throws Exception{
@@ -152,16 +156,19 @@ public class DemoLoader implements CommandLineRunner{
             """
         };
         
+        // Create a dummy user
+        // Get the relative location of the directory holding images.
+        User test = new User();
+        userRepository.save(test);
+
         for (int i = 0; i < names.length; i++){
-            User test = new User();
-            userRepository.save(test);
             recipes.add(Recipe.builder()
                                 .name(names[i])
                                 .user(test)
                                 .contents(contents[i])
                                 .dateCreated(LocalDateTime.now())
                                 .dateUpdated(LocalDateTime.now())
-                                .image(Files.readAllBytes(Paths.get(".\\spring_backend\\src\\main\\java\\com\\recipe\\demo\\" + images[i])))
+                                .image(getClass().getClassLoader().getResourceAsStream("images/" + images[i]).readAllBytes())
                                 .build());
         }
 
